# TUTnext

./: .env.example  .gitignore  README.md  config.py  parse_bus_data.py  pyproject.toml  requirements.txt  run.py
app/: config.py  database.py  main.py
app/routes/: bus.py  kadai.py  oauth.py  push.py  schedule.py
app/services/: gakuen_api.py  google_classroom.py
app/static/: index.html
app/utils/: parse_bus_temp.py
push_server/: push_pool.py  run.py  send_push.py
src/tutnext/: __main__.py  config.py  logging_config.py
src/tutnext/api/: app.py
src/tutnext/api/routes/: bus.py  kadai.py  live_activity.py  oauth.py  push.py  schedule.py  tmail.py
src/tutnext/core/: database.py  redis.py
src/tutnext/services/: bus_parser.py  bus_scraper.py  google_classroom.py
src/tutnext/services/gakuen/: __init__.py  client.py  errors.py  http.py  ids.py  session.py  session_manager.py
src/tutnext/services/push/: apns_client.py  live_activity.py  monitor.py  pool.py  sender.py
src/tutnext/static/: policy.html  user-agreement.html
tests/: conftest.py
